# libnss-maria

./: .gitignore  .travis.yml  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile-mariadb  Dockerfile.archlinux  Dockerfile.build  Dockerfile.centos  Dockerfile.debian  Dockerfile.fedora  Dockerfile.run  Dockerfile.ubuntu  Dockerfile.ubuntu-lts  README.md  Vagrantfile  build-debug.sh  build-docker.sh  docker-compose.yml  random_notes.txt  writing_nss_module.md
.github/workflows/: c.yml
OLD/helpers/: mariadb_adapter.h
authselect/: README  nsswitch.conf
docker/: Dockerfile.archlinux  Dockerfile.centos  Dockerfile.debian  Dockerfile.fedora  Dockerfile.mysql  Dockerfile.ubuntu  Dockerfile.ubuntu-lts  Dockerfile.unix_socket  docker-compose-mysql.yml  docker-compose-ssl-server.yml  docker-compose-unix-socket.yml  unix_socket_entrypoint.sh
docs/: criterion.gdb  random_notes.txt
examples/: create_user.txt
examples/libnss-mysql-linux/: libnss-maria-docker.conf  libnss-maria-root.conf  libnss-maria.conf
examples/libnss-mysql-linux/sql/: 1-db.sql  2-users.sql  3-data-structures.sql  4-privileges.sql  5-data.sql
examples/sos-sso/: database.sql  db_credentials.txt  get_db_credentials.sh  libnss-maria-docker.conf  libnss-maria.conf  libnss-maria.unix_socket.conf  nsswitch.conf  set_database.sh
examples/sos-sso/sql/: 1-db-and-users.sql  1-db.sql  2-data-structures.sql  2-users.sql  3-privileges.sql  4-data.sql  4-privileges.sql  5-data.sql
examples/ssl/: 70-turn-on-ssl.cnf  client.cnf  libnss-maria.conf  server.crt  server.csr  server.key
examples/unix_socket/: libnss-maria.conf
sample/sos-sso/: libnss-maria-root.conf  libnss-maria.conf  sample_database.sql
scripts/: build-debug.sh  build-docker-release.sh  build-docker.sh  build-vagrant-production.sh  build-vagrant-release.sh  build-vagrant.sh  compile_and_test.sh  compile_in_vagrant.sh  test-ssl-config.sh  test-unix-socket.sh
src/: CMakeLists.txt  configuration.c  configuration.h  configuration.h.in  configuration_helpers.c  configuration_helpers.h  debug.h  libnss-maria.c  libnss-maria.h  str_replace.c  str_replace.h
src/configuration/: maria_config.c  maria_config.h  maria_config_helpers.c  maria_config_helpers.h  maria_config_struct.h
src/controllers/: nssmaria_libconfig.c  nssmaria_libconfig.h
src/helpers/: mariadb_adapter.h  nssmaria_libconfig.c  nssmaria_libconfig.h
src/logger/: maria_logger.c  maria_logger.h  nssmaria_logger.c  nssmaria_logger.h
src/mariadb/: connection.c  connection.h  query.c  query.h
src/models/: Nssmaria_configurations.h  nssmaria_configurations.h
src/nss/: group.c  group.h  passwd.c  passwd.h  result_handler.c  result_handler.h  shadow.c  shadow.h
src/util/: config_db_settings.c
test/: CMakeLists.txt  libnss_maria_config_test.c  libnss_maria_queries_test.c  nss-maria-test.c  nss_maria_config_test.c
test/configuration/: maria_config_helpers_test.c  maria_config_test.c
test/fixtures/: connection_test.conf  libconfig-example.conf  libnss-maria-light.conf  libnss-maria-root-light.conf  libnss-maria-root.conf  libnss-maria.conf  libnss-mysql.cfg  libnss-mysql.conf  long_data.sql  lots_of_group_members.sql
test/helpers/: nssmaria_libconfig_test.c
test/integration/: buffers_test.bats  libnss_mysql.bats  nss_module.bats  nss_module.sh
test/logger/: maria_logger_test.c
test/performance/: check_correctness.bats  datasets_100.sh  datasets_1000.sh  datasets_100k.sh  datasets_10k.sh  datasets_1M.sh  gen_datasets.rb
